syntax = "proto3";

package api.location.v1beta1;

import "api/type/v1beta1/crossing.proto";
import "api/type/v1beta1/location.proto";
import "google/protobuf/timestamp.proto";
import "validate/validate.proto";

option go_package = "github.com/driverscooperative/geosrv/internal/idl/api/location/v1beta1";

service LocationService {
  rpc UpdateLocation(UpdateLocationRequest) returns (UpdateLocationResponse) {}
  rpc GetLocation(GetLocationRequest) returns (GetLocationResponse) {}
}

message UpdateLocationRequest {
  string area_key = 1 [(validate.rules).string.min_len = 1];
  string worker_id = 2 [(validate.rules).string.uuid = true];
  api.type.v1beta1.Location location = 3;
}

message UpdateLocationResponse {
  string area_key = 1;
  string worker_id = 2;
  api.type.v1beta1.Crossing crossing = 3;
}

message GetLocationRequest {
  string area_key = 1 [(validate.rules).string.min_len = 1];
  string worker_id = 2 [(validate.rules).string.uuid = true];
}

message GetLocationResponse {
  string area_key = 1;
  string worker_id = 2;
  api.type.v1beta1.Location location = 3;
  google.protobuf.Timestamp last_seen_time = 4;
}
