syntax = "proto3";

package api.type.v1beta1;

import "api/type/v1beta1/movement.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/openmarketplaceengine/openmarketplaceengine/internal/idl/api/type/v1beta1";

message Crossing {
  string id = 1;
  string tollgate_id = 2;
  string worker_id = 3;
  string direction = 4;
  string alg = 5;
  api.type.v1beta1.Movement movement = 6;
  google.protobuf.Timestamp create_time = 7;
}
