syntax = "proto3";

package omeapi.location.v1beta1;

option go_package = "omeapi/location/v1beta1";

import "google/protobuf/timestamp.proto";

service LocationService {
  rpc UpdateLocation(UpdateLocationRequest) returns (UpdateLocationResponse) {}
  rpc QueryLocation(QueryLocationRequest) returns (QueryLocationResponse) {}
}

message UpdateLocationRequest {
  string worker_id = 1;
  double longitude = 2;
  double latitude = 3;
}

message TollgateCrossing {
  string tollgate_id = 1;
  double longitude = 2;
  double latitude = 3;
  string direction = 4;
}

message UpdateLocationResponse {
  string worker_id = 1;
  TollgateCrossing tollgate_crossing = 2;
}

message QueryLocationRequest {
  string worker_id = 1;
}

message QueryLocationResponse {
  string worker_id = 1;
  double longitude = 2;
  double latitude = 3;
  google.protobuf.Timestamp last_seen_time = 5;
}
